# ProductManagementSystem

Backend/: .env  .gitignore  pyproject.toml
Backend/.github/workflows/: ci.yml
Backend/alembic/: env.py
Backend/alembic/versions/: 1caae9b33a8e_create_first_table.py
Backend/app/api/routes/: products.py
Backend/app/core/: config.py
Backend/app/db/: session.py
Backend/app/models/: product.py  user.py
Backend/app/tests/: conftest.py
