[tool.poetry]
name = "productmanagementsystem"
version = "0.1.0"
description = "Product management system with FastAPI and PostgreSQL"
authors = ["Samuel Domingos <samueldomingos201202@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.119.0,<0.120.0"
uvicorn = ">=0.38.0,<0.39.0"
sqlalchemy = ">=2.0.44,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = ">=2.12.3,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
alembic = ">=1.17.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"
mypy = ">=1.18.2,<2.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
httpx = ">=0.28.1,<0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
